style fixes for overlapping smiley bbcode popup over footer

--- a/themes/cwclan_boot/css/responsive.css
+++ b/themes/cwclan_boot/css/responsive.css
@@ -195,3 +195,4 @@
 (min-resolution: 120dpi) {
 
 }
+.col-md-4{position:static}
